# python_package_template

./: .coveragerc  .dockerignore  .flake8  .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  coverage.json  coverage.xml  docker-compose.yml  jupyter.Dockerfile  mypy.ini  package.Dockerfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/notebooks/: demo.ipynb
etc/: entrypoint.sh
etc/dev/: .env  entrypoint.sh
etc/test/: .env  entrypoint.sh
git_hooks/: pre-push
tests/: test_main.py
