[project]
name = "python_package_template"
version = "0.0.1"
authors = [
  { name="Anar Guliyev", email="anar@trialspark.com" },
]
description = "A template for python packages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trialspark/python_package_template"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
